# MyCode

./: CMakeLists.txt  hello.c  world.c
lib/: lib_main.so.1  lib_main.so.1.2
src/: add.cpp  func.h  main.cpp
